--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-
     <title>Countdown</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <div class="">
-      <input type="date" name="" value="">
-      <input type="time" name="" value="">
-      <button type="button" class="btn btn-primary" id="start">start</button>
+    <div class="inputing">
+      <div class="typing">
+          <h2>Timmer</h2>
+      </div>
+      <div class="hide">
+        <input type="date" name="" value="">
+        <input type="time" name="" value="">
+        <button type="button" class="btn btn-primary" id="start">start</button>
+      </div>
     </div>
       <div class="timer">
         <h1>Time Left</h1>
@@ -35,6 +38,9 @@
             <p class="big-text" id="sec">0</p>
             <span>sec</span>
           </div>
+        </div>
+        <div class="">
+          <button type="button"  class="btn btn-primary" onclick="window.location.reload();">Refresh</button>
         </div>
       </div>
       <script src="index.js" charset="utf-8"></script>
