--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
       <div class="timer">
         <h1>Time Left</h1>
         <div class="countdown">
-          <div class="counter-l days-c">
+          <div class="counter-l days-c col col-sm-6 col-md-3 col-lg-1 ">
             <p class="big-text" id="days">0</p>
             <span>days</span>
           </div>
-          <div class="counter-l hours-c">
+          <div class="counter-l hours-c col col-sm-6 col-md-3 col-lg-1 ">
             <p class="big-text" id="hours">0</p>
             <span>hours</span>
           </div>
-          <div class="counter-l mins-c">
+          <div class="counter-l mins-c col col-sm-6 col-md-3 col-lg-1 ">
             <p class="big-text" id="mins">0</p>
             <span>mins</span>
           </div>
-          <div class="counter-l sec-c">
+          <div class="counter-l sec-c col col-sm-6 col-md-3 col-lg-1 ">
             <p class="big-text" id="sec">0</p>
             <span>sec</span>
           </div>
